--- a/package.json
+++ b/package.json
@@ -4,22 +4,20 @@
   "version": "1.0.0",
   "author": "Nome Author",
   "scripts": {
-    "build": "gulp build",
-    "start": "gulp start"
+    "build": "npx mix --production",
+    "start": "npx mix watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/user-name/plugin-name.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-jsmin": "^0.1.5",
-    "gulp-sass": "^5.1.0",
-    "sass": "^1.57.1"
+    "laravel-mix": "^6.0.49",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^12.6.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "bugs": {
     "url": "https://github.com/user-name/plugin-name/issues"
