--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,36 @@
 {
-    "name": "studiovisual/plugin-name",
-    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "name": "samircafruni/plugin-name",
+    "description": "",
     "minimum-stability": "stable",
     "license": "proprietary",
     "authors": [
         {
-            "name": "Studio Visual",
-            "email": "atendimento@studiovisual.com.br"
+            "name": "Samir Cafruni"
         }
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/studiovisual/plugin-name"
+        "url": "https://github.com/..."
     },
     "type": "wordpress-plugin",
     "config": {
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "jjgrainger/posttypes": "^2.2"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^6.3"
     },
     "autoload": {
         "classmap": [
-            "app",
-            "app/Classes",
-            "app/Controllers"
+            "./app",
+            "./app/Classes",
+            "./app/Controllers"
         ],
         "psr-4": {
-            "App\\": "app/"
+            ".\\App\\": "app/"
         }
     }
 }
